--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "okam-skeleton",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "a miniProg skeleton component",
-  "main": "index.vue",
+  "main": "Skeleton.vue",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
